# coresetk

./: CMakeLists.txt  README.md  compile_c.sh  install.sh  test.csv  test.py
metrics/: dunn_index.py  index.py
resources/: coresetk.yaml
sampling/: modification_protras.py  protras.py  sampling_algorithm.py
sampling/boost_python/: _protras.cpp
sampling/c_code/: CMakeLists.txt  __c__.cpp
sampling/c_code/include/: modification_protras.hpp  protras.hpp
sampling/c_code/src/: core.cpp  datapoint.cpp  dict.cpp  merge_sort.cpp  modification_protras.cpp  protras.cpp
streaming/: base_context.py  process_tweet.py  streaming_model.py
task/: cvc.py
utils/: pipeline.py  pipeline_operator.py  twitter.py
utils/c_code/: CMakeLists.txt  __c__.cpp
utils/c_code/include/: accessor.hpp  measure.hpp
utils/c_code/src/: accessor.cpp  measure.cpp
